# Revo-Contracts

./: .gitignore  CROWDFUNDING_DEPLOYMENT_SUMMARY.md  Cargo.toml  DEPLOYER_SCRIPT_README.md  DEPLOYMENT.md  DEPLOYMENTS.md  EQUIPMENT_RENTAL_DEPLOYMENT_SUMMARY.md  PR_DESCRIPTION.md  README.md  WARP.md  batch_deploy.sh
.github/workflows/: rust.yml
ContractsRevo/: .gitignore
ContractsRevo/RatingSystemContract/: Cargo.toml
ContractsRevo/a-lp-token-contract/: Cargo.toml
ContractsRevo/a-lp-token-contract/src/: contract.rs
ContractsRevo/agricultural-auction-contract/: Cargo.toml  README.md
ContractsRevo/agricultural-quality-contract/: Cargo.toml  DEPLOYMENT.md  README.md
ContractsRevo/agricultural-quality-contract/src/: datatypes.rs  dispute_handling.rs  interface.rs  lib.rs  quality_metrics.rs  resolution.rs  test.rs  verification.rs
ContractsRevo/agricultural-quality-contract/src/tests/: assessment.rs  certification.rs  mod.rs  utils.rs  validation.rs
ContractsRevo/agricultural-training-contract/: Cargo.toml  Makefile  README.md
ContractsRevo/certificate-management-contract/: Cargo.toml  DEPLOYMENT.md  QUICK_DEPLOY.md  README.md  TEST_PLAN.md
ContractsRevo/certification-contract/: Cargo.toml  README.md
ContractsRevo/commodity-token-contract/: Cargo.toml  README.md
ContractsRevo/cooperative-management-contract/: Cargo.toml  DEPLOYMENT.md  README.md
ContractsRevo/coorperative-management-contract/: Cargo.toml
ContractsRevo/crop-yield-prediction/: DEPLOYMENT.md  README.md
ContractsRevo/cross-cooperative-trade-contract/: Cargo.toml  README.md  deploy_script.zsh
ContractsRevo/crowdfunding-farmer-contract/: Cargo.toml  DEPLOYMENT_GUIDE.md  Makefile  README.md
ContractsRevo/crowdfunding-farmer-contract/src/: campaign.rs  contribution.rs  lib.rs  rewards.rs  test.rs  utils.rs
ContractsRevo/crowdfunding-farmer-contract/src/tests/: campaign.rs  contribution.rs  mod.rs  rewards.rs  utils.rs
ContractsRevo/csa-membership-contract/: Cargo.toml  README.md
ContractsRevo/environmental-impact-tracking/: Cargo.toml  DEPLOYMENT.md  README.md
ContractsRevo/microlending-contract/: Cargo.toml  Makefile  README.md  deploy.ps1  deploy.sh
ContractsRevo/microlending-contract/src/: claim.rs  datatypes.rs  fund.rs  lib.rs  repay.rs  request.rs  test.rs
ContractsRevo/price-stabilization-contract/: Cargo.toml  Makefile  README.md
ContractsRevo/price-stabilization-contract/src/: datatype.rs  distribution.rs  fund.rs  interface.rs  lib.rs  pricing.rs  test.rs  test_comprehensive.rs  test_simple.rs  utils.rs
ContractsRevo/price-stabilization-contract/src/tests/: distribution.rs  fund.rs  mod.rs  pricing.rs  utils.rs
ContractsRevo/product-auction-contract/: Cargo.toml  README.md
ContractsRevo/product-auction-contract/src/: datatype.rs  interfaces.rs  lib.rs  listing.rs  product_auction.rs  shipping.rs  test.rs  verification.rs
ContractsRevo/product-auction-contract/src/tests/: auction.rs  bidding.rs  mod.rs  product.rs  settlement.rs  utils.rs
ContractsRevo/product-auction-contract/test_snapshots/test/: test_add_product.1.json  test_estimate_delivery_time.1.json  test_extend_auction.1.json  test_extend_auction_ended.1.json  test_extend_auction_invalid_auction_end_time.1.json  test_extend_auction_too_late_to_extend.1.json  test_finalize_auction.1.json  test_finalize_auction_no_bids.1.json  test_finalize_auction_not_ended.1.json  test_finalize_auction_out_of_stock.1.json  test_get_products.1.json  test_get_shipment.1.json  test_get_shipments.1.json  test_open_dispute_already_exists.1.json  test_place_bid.1.json  test_place_bid_auction_ended.1.json  test_place_bid_bid_too_low.1.json  test_request_return_already_exists.1.json  test_request_seller_verification.1.json  test_request_seller_verification_already_verified.1.json  test_resolve_dispute.1.json  test_resolve_return.1.json  test_set_return_policy.1.json  test_update_stock.1.json  test_verify_condition.1.json  test_verify_product_unverified.1.json  test_verify_product_verified.1.json  test_verify_seller.1.json  test_verify_seller_unverified.1.json
IPurchaseReviewContract/: README.md
scripts/: DEPLOY_FARMER_INSURANCE_README.md  FARMER_INSURANCE_DEPLOYMENT_SUMMARY.md  FARMER_INSURANCE_VERIFICATION.md  PRODUCT_AUCTION_CONFIG.md  PRODUCT_AUCTION_README.md  README.md  deploy_a_lp_token_contract.zsh  deploy_agricultural_auction.zsh  deploy_agricultural_quality.zsh  deploy_agricultural_training.zsh  deploy_certificate_management_contract.zsh  deploy_cooperative_management.zsh  deploy_crop_yield_prediction.zsh  deploy_crowdfunding.bat  deploy_crowdfunding_farmer.ps1  deploy_crowdfunding_farmer.zsh  deploy_environmental_impact.zsh  deploy_equipment_rental.ps1  deploy_equipment_rental.zsh  deploy_equipment_rental_manual.ps1  deploy_farmer_insurance.ps1  deploy_farmer_insurance.zsh  deploy_farmer_token_contract.zsh  deploy_land_leasing_contract.zsh  deploy_loyalty_token_contract.zsh  deploy_manual.ps1  deploy_market_demand_forecasting_contract.zsh  deploy_microlending_contract.zsh  deploy_price_stabilization_contract.zsh  deploy_product_auction.zsh  deploy_purchase_review_contract.zsh  deploy_rating_system_contract.zsh  deploy_script.zsh  deploy_supply_chain_tracking_contract.zsh  deploy_transaction_nft_contract.zsh  deploy_water_management.zsh  deployer.sh  example_config.md  test_crowdfunding_farmer_deploy.zsh  test_deploy_script.zsh  (+3 more)
(+444 files in other folders)
