[workspace]
resolver = "2"
members = [
    "ContractsRevo/*"
]
[workspace.dependencies]
soroban-sdk = "22.0.7"
certificate-management-contract = { path = "ContractsRevo/certificate-management-contract/"}
num-integer = { version = "0.1", default-features = false }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
