[package]
name = "agricultural-quality-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
certificate-management-contract = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }