[package]
name = "crowdfunding-farmer-contract"
version = "0.1.0"
description = "Smart contract for farmer crowdfunding on Stellar"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }