[package]
name = "product-auction-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dependencies.uuid]
version = "1.14.0"
features = [
    "v4",
]

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
